fix: Make fixed header resize correctly on safari
Safari uses the viewport as the posioned parent instead of any
positioned ancestor element, which meant that the full width was taking
the viewport instead of the site wrapper.

--- a/styles/components/_mobile-menu.scss
+++ b/styles/components/_mobile-menu.scss
@@ -21,6 +21,16 @@ body.mobile-menu-active {
             left: -$mobile-menu-width-lg;
         }
     }
+
+    .header.fixed {
+        left: -$mobile-menu-width;
+        right: $mobile-menu-width;
+
+        @include mq(lg) {
+            left: -$mobile-menu-width-lg;
+            right: $mobile-menu-width-lg;
+        }
+    }
 }
 
 .site-wrapper {
