--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -7,7 +7,8 @@
     &.fixed {
         position: fixed;
         top: 0;
-        width: 100%;
+        right: 0;
+        left: 0;
         z-index: $zi-header;
         box-shadow: 0 5px 35px rgba(0, 0, 0, 0.1);
 
